<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2018 The Chromium Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->

<org.chromium.chrome.browser.widget.bottomsheet.BottomSheet
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <org.chromium.chrome.browser.widget.bottomsheet.TouchRestrictingFrameLayout
        android:id="@+id/bottom_sheet_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/top_round" />

    <FrameLayout
        android:id="@+id/bottom_sheet_control_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <view
            class="org.chromium.chrome.browser.widget.bottomsheet.TouchRestrictingFrameLayout"
            android:id="@+id/bottom_sheet_toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <View
                android:id="@+id/bottom_sheet_toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bottom_sheet_peek_height" />
        </view>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/bottom_sheet_snackbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom" />

</org.chromium.chrome.browser.widget.bottomsheet.BottomSheet>
